force-app/main/default/objects/LLC_BI__Loan__c/fields/Additional_Information_Received__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Received__c</fullName>
    <description>This will be set when Loan officer receive the requested additional information to have the Credit Underwriter complete an application review.</description>
    <inlineHelpText>This will be set when Loan officer receive the requested additional information to have the Credit Underwriter complete an application review.</inlineHelpText>
    <label>Additional Information Received</label>
    <type>Date</type>
</CustomField>