force-app/main/default/objects/LLC_BI__Loan__c/fields/Additional_Information_Requested__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Requested__c</fullName>
    <description>This will be set when credit underwriter requests additional information to complete an application review.</description>
    <inlineHelpText>This will be set when credit underwriter requests additional information to complete an application review.</inlineHelpText>
    <label>Additional Information Requested</label>
    <type>Date</type>
</CustomField>