force-app/main/default/objects/LLC_BI__Loan__c/fields/Amount_of_additional_funds__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_additional_funds__c</fullName>
    <label>Amount of additional funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>