force-app/main/default/objects/LLC_BI__Loan__c/fields/Application_On_Hold_Last_Notification__c.field-meta.xml
<CustomField>
    <fullName>Application_On_Hold_Last_Notification__c</fullName>
    <label>Application On Hold Last Notification</label>
    <type>Date</type>
</CustomField>