force-app/main/default/objects/LLC_BI__Loan__c/fields/Appraisal_Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Delivered_Date__c</fullName>
    <label>Appraisal Delivered Date</label>
    <type>Date</type>
</CustomField>