force-app/main/default/objects/LLC_BI__Loan__c/fields/Approval_Advised_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Advised_Sent_Date__c</fullName>
    <label>Approval Advised/Sent Date</label>
    <type>Date</type>
</CustomField>