force-app/main/default/objects/LLC_BI__Loan__c/fields/ApprovalExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalExpirationDate__c</fullName>
    <formula>LLC_BI__Credit_Approval_Date__c + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Expiration Date</label>
    <type>Date</type>
</CustomField>