force-app/main/default/objects/LLC_BI__Loan__c/fields/Auto_Pay_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Auto_Pay_Account_Type__c</fullName>
    <label>Auto Pay Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Checking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>