force-app/main/default/objects/LLC_BI__Loan__c/fields/Closing_Specialist_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closing_Specialist_Review_Comments__c</fullName>
    <inlineHelpText>Enter comments relevant to the closing review findings.</inlineHelpText>
    <label>Closing Specialist Review Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>