force-app/main/default/objects/LLC_BI__Loan__c/fields/cm_Closer__c.field-meta.xml
<CustomField>
    <fullName>cm_Closer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to capture the assigned Closer. Added for the Commercial Accelerate project.</description>
    <label>Closing Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loans4</relationshipName>
    <type>Lookup</type>
</CustomField>