force-app/main/default/objects/LLC_BI__Loan__c/fields/cm_Completed_Application__c.field-meta.xml
<CustomField>
    <fullName>cm_Completed_Application__c</fullName>
    <description>This field tracks the completed application date for the loan record. Added for the commercial accelerate project.</description>
    <inlineHelpText>Date where the banker certifies it received all the information required per the term sheet/RFI. This date will initiate the Reg B timer.</inlineHelpText>
    <label>Completed Application</label>
    <type>Date</type>
</CustomField>