force-app/main/default/objects/LLC_BI__Loan__c/fields/cm_Exposure_Calculation__c.field-meta.xml
<CustomField>
    <fullName>cm_Exposure_Calculation__c</fullName>
    <formula>IF(
AND(OR( LLC_BI__isRenewal__c = true,  LLC_BI__Is_Modification__c = true), NOT(ISPICKVAL(LLC_BI__Stage__c, &apos;Booked&apos;))),  LLC_BI__Amount_New_Money__c ,
IF(
AND(LLC_BI__isRenewal__c = false,  LLC_BI__Is_Modification__c = false, NOT(ISPICKVAL(LLC_BI__Stage__c, &apos;Booked&apos;))),  LLC_BI__Amount__c ,
IF(
ISPICKVAL(LLC_BI__Stage__c, &quot;Booked&quot;),  LLC_BI__Principal_Balance__c +  LLC_BI__Availability_From_Core__c , 
LLC_BI__Principal_Balance__c +  LLC_BI__Availability_From_Core__c)))

/* 
This formula uses an else/if structure to derive the exposure value and works as follows:

1. If Renewal or Modification, and the stage does not equal Booked, use Amount New Money.

2. For net new loans where the stage is Proposal &gt; Booking &amp; Funding, the exposure calculation will use Loan Amount.

3. For Booked Loans, the exposure calculation is Principal Balance + Availability from Core.

*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exposure Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>