force-app/main/default/objects/LLC_BI__Loan__c/fields/cm_Memo_Modification_Count__c.field-meta.xml
<CustomField>
    <fullName>cm_Memo_Modification_Count__c</fullName>
    <description>A hidden roll-up summary field to count the number of Under Review Change Memo records.  Used in Memo AP automation.</description>
    <inlineHelpText>A hidden roll-up summary field to count the number of Under Review Change Memo records.  Used in Memo AP automation.</inlineHelpText>
    <label>Memo Modification Count</label>
    <summaryFilterItems>
        <field>LLC_BI__Credit_Memo_Modifcation__c.LLC_BI__Approval_Status__c</field>
        <operation>equals</operation>
        <value>New, Under Review</value>
    </summaryFilterItems>
    <summaryForeignKey>LLC_BI__Credit_Memo_Modifcation__c.LLC_BI__Loan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>