force-app/main/default/objects/LLC_BI__Loan__c/fields/cm_Method_of_Doc_Prep__c.field-meta.xml
<CustomField>
    <fullName>cm_Method_of_Doc_Prep__c</fullName>
    <description>Tracks method of document preparation. Added for the commercial accelerate project.</description>
    <label>Method of Doc Prep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney Prepared</fullName>
            </value>
            <value>
                <fullName>Internally Prepared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>