force-app/main/default/objects/LLC_BI__Loan__c/fields/cm_Portfolio_Manager__c.field-meta.xml
<CustomField>
    <fullName>cm_Portfolio_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to capture the assigned Portfolio Manager. Added for the Commercial Accelerate project.</description>
    <label>Portfolio Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loans3</relationshipName>
    <type>Lookup</type>
</CustomField>