force-app/main/default/objects/LLC_BI__Loan__c/fields/cm_Property_is_in_a_Flood_Zone__c.field-meta.xml
<CustomField>
    <fullName>cm_Property_is_in_a_Flood_Zone__c</fullName>
    <label>Property is in a Flood Zone?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>