force-app/main/default/objects/LLC_BI__Loan__c/fields/cm_Today_s_Date__c.field-meta.xml
<CustomField>
    <fullName>cm_Today_s_Date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today&apos;s Date</label>
    <type>Date</type>
</CustomField>