force-app/main/default/objects/LLC_BI__Loan__c/fields/Commercial_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Purpose__c</fullName>
    <inlineHelpText>Is the real estate to be purchased for commercial purposes?</inlineHelpText>
    <label>Commercial Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>