force-app/main/default/objects/LLC_BI__Loan__c/fields/Commercial_RE_Debt__c.field-meta.xml
<CustomField>
    <fullName>Commercial_RE_Debt__c</fullName>
    <inlineHelpText>Is the debt related to a commercial real estate property?</inlineHelpText>
    <label>Commercial RE Debt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>