force-app/main/default/objects/LLC_BI__Loan__c/fields/Commitment_Letter_Due__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Letter_Due__c</fullName>
    <formula>IF(ISBLANK( Commitment_Letter_Sent__c),
null,
Commitment_Letter_Sent__c + 60
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commitment Letter Due</label>
    <type>Date</type>
</CustomField>