force-app/main/default/objects/LLC_BI__Loan__c/fields/Community_Development_Type__c.field-meta.xml
<CustomField>
    <fullName>Community_Development_Type__c</fullName>
    <label>Community Development Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affordable Housing</fullName>
            </value>
            <value>
                <fullName>Economic Development</fullName>
            </value>
            <value>
                <fullName>Community Services</fullName>
            </value>
            <value>
                <fullName>Revitalization or Stabilization</fullName>
            </value>
            <value>
                <fullName>Nonprofit organizations</fullName>
            </value>
            <value>
                <fullName>Construction or rehab of community facilities</fullName>
            </value>
            <value>
                <fullName>Financial intermediaries</fullName>
            </value>
            <value>
                <fullName>Local, State or Tribal governments</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>