force-app/main/default/objects/LLC_BI__Loan__c/fields/Counter_Offer_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Counter_Offer_Letter_Sent__c</fullName>
    <label>Counter Offer Letter Sent</label>
    <type>Date</type>
</CustomField>