force-app/main/default/objects/LLC_BI__Loan__c/fields/Counter_Offer_Verbally_Advised__c.field-meta.xml
<CustomField>
    <fullName>Counter_Offer_Verbally_Advised__c</fullName>
    <label>Counter Offer Verbally Advised</label>
    <type>Date</type>
</CustomField>