force-app/main/default/objects/LLC_BI__Loan__c/fields/CRA_Comments__c.field-meta.xml
<CustomField>
    <fullName>CRA_Comments__c</fullName>
    <label>CRA Comments</label>
    <type>TextArea</type>
</CustomField>