force-app/main/default/objects/LLC_BI__Loan__c/fields/Cumulative_Days_of_Extensions__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Days_of_Extensions__c</fullName>
    <description>Captures the Cumulative Number of Days which the loan has been extended via Short-Term Extensions.  Includes In Progress Extensions.</description>
    <inlineHelpText>Captures the Cumulative Number of Days which the loan has been extended via Short-Term Extensions.  Includes In Progress Extensions.</inlineHelpText>
    <label>Cumulative Days of Extensions</label>
    <summarizedField>LLC_BI__Credit_Memo_Modifcation__c.Length_of_Short_Term_Extension__c</summarizedField>
    <summaryFilterItems>
        <field>LLC_BI__Credit_Memo_Modifcation__c.LLC_BI__Approval_Status__c</field>
        <operation>equals</operation>
        <value>New, Under Review, Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LLC_BI__Credit_Memo_Modifcation__c.LLC_BI__Memo_Type__c</field>
        <operation>equals</operation>
        <value>Short Term Extension</value>
    </summaryFilterItems>
    <summaryForeignKey>LLC_BI__Credit_Memo_Modifcation__c.LLC_BI__Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>