force-app/main/default/objects/LLC_BI__Loan__c/fields/Decision_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Due_Date__c</fullName>
    <description>This field tracks when a decision is due.</description>
    <formula>If( ISPICKVAL(LLC_BI__Status__c, &apos;Hold&apos;), 
    NULL ,
    IF(ISBLANK(Decision_Resume_Date__c),
       cm_Completed_Application__c + 30,
       Decision_Resume_Date__c + 30
      )
   )</formula>
    <inlineHelpText>Deadline for the bank to issue a decision  to the client.</inlineHelpText>
    <label>Decision Due Date</label>
    <type>Date</type>
</CustomField>