force-app/main/default/objects/LLC_BI__Loan__c/fields/Decision_Hold_Comments__c.field-meta.xml
<CustomField>
    <fullName>Decision_Hold_Comments__c</fullName>
    <description>If there is a hold, please elaborate on the hold reason.</description>
    <inlineHelpText>If there is a hold, please elaborate on the hold reason.</inlineHelpText>
    <label>Decision Hold Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>