force-app/main/default/objects/LLC_BI__Loan__c/fields/Decision_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decision_Hold_Reason__c</fullName>
    <description>Please select the reason why the application was put on hold.</description>
    <inlineHelpText>Please select the reason why the application was put on hold.</inlineHelpText>
    <label>Decision Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appraisal or Evaluation</fullName>
            </value>
            <value>
                <fullName>Other Third Party Report</fullName>
            </value>
            <value>
                <fullName>Additional Borrower Information</fullName>
            </value>
            <value>
                <fullName>Additional Guarantor Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>