force-app/main/default/objects/LLC_BI__Loan__c/fields/Decision_Resume_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Resume_Date__c</fullName>
    <description>This field is set when underwriters receive RFIa and check is Review Ready checkbox.</description>
    <inlineHelpText>Date when banker reviews and confirms the information received if sufficient to complete the underwriting process. This date will restart the Reg B clock at 0.</inlineHelpText>
    <label>Decision Resume Date</label>
    <type>Date</type>
</CustomField>