force-app/main/default/objects/LLC_BI__Loan__c/fields/Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Declined_Date__c</fullName>
    <label>Decline Advised/Sent Date</label>
    <type>Date</type>
</CustomField>