force-app/main/default/objects/LLC_BI__Loan__c/fields/Do_you_own_the_property_that_is_going_to__c.field-meta.xml
<CustomField>
    <fullName>Do_you_own_the_property_that_is_going_to__c</fullName>
    <description>Do you own the property that is going to be expanded or remodeled?</description>
    <label>Do you own the property?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>