force-app/main/default/objects/LLC_BI__Loan__c/fields/Due_Date_for_Client_to_Respond_Counter__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_for_Client_to_Respond_Counter__c</fullName>
    <description>This field sets the due date for client to respond counter, which is 60 days after notice is sent.</description>
    <formula>IF(ISBLANK( Counter_Offer_Verbally_Advised__c ), 
IF(ISBLANK( Counter_Offer_Letter_Sent__c  ), null, Counter_Offer_Letter_Sent__c  + 30),
Counter_Offer_Verbally_Advised__c + 30 

)</formula>
    <inlineHelpText>Due date for client to respond to counteroffer made.</inlineHelpText>
    <label>Counter Offer Expiration Date</label>
    <type>Date</type>
</CustomField>