force-app/main/default/objects/LLC_BI__Loan__c/fields/EarliestClosingDate__c.field-meta.xml
<CustomField>
    <fullName>EarliestClosingDate__c</fullName>
    <formula>IF(ISBLANK( Appraisal_Delivered_Date__c ),
IF(ISBLANK( Appraisal_Waived_Date__c ), null, 
(Appraisal_Waived_Date__c + 
CASE(
 WEEKDAY(Appraisal_Waived_Date__c),
 1, 3,
 2, 3,
 3, 3,
 4, 5,
 5, 5,
 6, 5,
 7, 5,
0)
)),
(Appraisal_Delivered_Date__c + 
CASE(
 WEEKDAY(Appraisal_Delivered_Date__c),
 1, 3,
 2, 3,
 3, 3,
 4, 5,
 5, 5,
 6, 5,
 7, 5,
0)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest Closing Date</label>
    <type>Date</type>
</CustomField>