force-app/main/default/objects/LLC_BI__Loan__c/fields/ffin_Credit_Manager_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>ffin_Credit_Manager_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used for Credit Manager to set themself as the Lookup</description>
    <label>Credit Manager Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loans7</relationshipName>
    <type>Lookup</type>
</CustomField>