force-app/main/default/objects/LLC_BI__Loan__c/fields/ffin_Docs_Review_Needed__c.field-meta.xml
<CustomField>
    <fullName>ffin_Docs_Review_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for Doc Prep Manager to fill in when Docs are Needed By</inlineHelpText>
    <label>Docs Review Needed</label>
    <type>Checkbox</type>
</CustomField>