force-app/main/default/objects/LLC_BI__Loan__c/fields/ffin_Lender_Plans_to_Underwrite__c.field-meta.xml
<CustomField>
    <fullName>ffin_Lender_Plans_to_Underwrite__c</fullName>
    <description>Lender to determine if they plan to underwrite the loan request prior to changing a loan to Credit Underwriting</description>
    <inlineHelpText>If the Lender plans to Underwrite this request, select Yes, otherwise select No.  When selecting Yes, the lender will be automatically added as the Credit Analyst / Underwriter.</inlineHelpText>
    <label>Lender Plans to Underwrite?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>