force-app/main/default/objects/LLC_BI__Loan__c/fields/ffin_Prepayment_Penalty_Setup__c.field-meta.xml
<CustomField>
    <fullName>ffin_Prepayment_Penalty_Setup__c</fullName>
    <description>As a lender I need to a way to document prepayment penalties on a loan record so I can communicate it with the borrower.</description>
    <label>Prepayment Penalty Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3/2/1, first 3 years</fullName>
            </value>
            <value>
                <fullName>3/2/2, first 3 years</fullName>
            </value>
            <value>
                <fullName>3/3/2/1, first 4 years</fullName>
            </value>
            <value>
                <fullName>5/4/3/2/1, first 5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>