force-app/main/default/objects/LLC_BI__Loan__c/fields/ffin_Purpose_Code__c.field-meta.xml
<CustomField>
    <fullName>ffin_Purpose_Code__c</fullName>
    <description>First Financials Purpose Code which will be mapped to JHJX</description>
    <label>Purpose Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LLC_BI__Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - To acquire or carry seasonal inventory increase</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - To acquire or carry non-seasonal inventory increase</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - To acquire presold inventory</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - To take advantage of quantity discounts</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 - To carry A/R resulting from seasonal increase in sales</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 - To carry non-seasonal increase in A/R</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 - To acquire or carry seasonal inventory &amp; A/R increase</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 - To acquire or carry non-seasonal inv. &amp; A/R increase</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13 - To acquire or carry other current assets</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 - To acquire or carry investments to be held 60 days or less</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>16 - To acquire or carry listed stock long term</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>17 - To acquire or carry unlisted stock long term</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>18 - To acquire or carry bank or bank holding company stock L/T</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20 - To acquire or carry corporate notes/bonds long term</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>21 - To acquire or carry nonprofit institution bonds long term</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>22 - To acquire or carry U.S./U.S. agency securities long term</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>23 - To acquire or carry State/State agency securities long term</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>24 - To acquire or carry Municipal/Co. or Spec. Dist. bonds L/T</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>25 - To acquire or carry other long term investments</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>26 - To acquire or carry partnership interest</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>27 - To acquire or carry controlling interest in another entity</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30 - To acquire furniture and fixtures</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>31 - To acquire plant equipment</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>32 - To acquire intangible assets</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>33 - To fund equipment lease</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>34 - To acquire or carry mineral interest</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>35 - To replace bank overdraft</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>36 - To replace short term bank loan</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>37 - To replace long term bank loan</label>
            </value>
            <value>
                <fullName>38</fullName>
                <label>38 - To replace tax liability</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>