force-app/main/default/objects/LLC_BI__Loan__c/fields/ffin_Request_Needed_By__c.field-meta.xml
<CustomField>
    <fullName>ffin_Request_Needed_By__c</fullName>
    <description>Field used for Lender / Lending Assistant to select the Date their Request Type is Needed By</description>
    <inlineHelpText>Lender / Lending Assistant to select the Date their Request Type is Needed By</inlineHelpText>
    <label>Request Needed By</label>
    <type>Date</type>
</CustomField>