force-app/main/default/objects/LLC_BI__Loan__c/fields/ffin_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>ffin_Request_Type__c</fullName>
    <description>Field used for Lender / Lending Assistant to select their Request Type when moving to Underwriting</description>
    <inlineHelpText>Lender / Lending Assistant to select their Request Type when moving to Underwriting</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Loan Presentation</fullName>
            </value>
            <value>
                <fullName>Streamlined Loan Presentation</fullName>
            </value>
            <value>
                <fullName>Spreads Only</fullName>
            </value>
            <value>
                <fullName>Cash Flow Only</fullName>
            </value>
            <value>
                <fullName>Spreads &amp; Cash Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>