force-app/main/default/objects/LLC_BI__Loan__c/fields/First_Lien_On_Dwelling_Determined_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Lien_On_Dwelling_Determined_Date__c</fullName>
    <description>Auto-Populated when 1st Lien On Dwelling field is set to &quot;yes&quot;</description>
    <label>1st Lien On Dwelling Determined Date`</label>
    <type>Date</type>
</CustomField>