force-app/main/default/objects/LLC_BI__Loan__c/fields/HVCRE_Reportable__c.field-meta.xml
<CustomField>
    <fullName>HVCRE_Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HVCRE Reportable</label>
    <type>Checkbox</type>
</CustomField>