force-app/main/default/objects/LLC_BI__Loan__c/fields/In_Product_Package__c.field-meta.xml
<CustomField>
    <fullName>In_Product_Package__c</fullName>
    <formula>Not(ISBLANK( LLC_BI__Product_Package__c))</formula>
    <label>In Product Package</label>
    <type>Checkbox</type>
</CustomField>