force-app/main/default/objects/LLC_BI__Loan__c/fields/Incomplete_Date__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Date__c</fullName>
    <label>Incomplete Date</label>
    <type>Date</type>
</CustomField>