force-app/main/default/objects/LLC_BI__Loan__c/fields/IncompleteCompleteClock__c.field-meta.xml
<CustomField>
    <fullName>IncompleteCompleteClock__c</fullName>
    <formula>IF( 
OR(
NOT(ISBLANK (cm_Completed_Application__c)), 
cm_Completed_Application__c&gt;= Incomplete_Date__c), 
(cm_Completed_Application__c+ 30), 
IF( 
NOT (ISBLANK ( Incomplete_Date__c)),
(Incomplete_Date__c+ 30), 
IF( 
AND(
NOT(ISBLANK(Counter_Offer_Letter_Sent__c)),
NOT(ISBLANK(Counteroffer_Received__c))),
((cm_Completed_Application__c + 30) + (Counteroffer_Received__c - Counter_Offer_Letter_Sent__c)),
NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incomplete/Complete Clock</label>
    <type>Date</type>
</CustomField>