force-app/main/default/objects/LLC_BI__Loan__c/fields/InitialApplicationClock__c.field-meta.xml
<CustomField>
    <fullName>InitialApplicationClock__c</fullName>
    <formula>Application_Date__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Application Clock</label>
    <type>Date</type>
</CustomField>