force-app/main/default/objects/LLC_BI__Loan__c/fields/JHJX__AccountOfficer__c.field-meta.xml
<CustomField>
    <fullName>JHJX__AccountOfficer__c</fullName>
    <formula>Owner:User.LLC_BI__Officer_Number__c</formula>
    <label>Loan Primary Relationship Officer Number</label>
    <type>Text</type>
</CustomField>